--- a/Components/Pages/Workshops.razor
+++ b/Components/Pages/Workshops.razor
@@ -1,4 +1,4 @@
-@page "/Workshops"
+﻿@page "/Workshops"
 @inject IWebHostEnvironment Env
 @inject GitHubUploader GitHubUploader
 @rendermode InteractiveServer
