--- a/Components/Pages/Buchung.razor
+++ b/Components/Pages/Buchung.razor
@@ -99,7 +99,7 @@
     private Dictionary<string, string> klasseCodes = new();
 
     private string BuchungenPath => Path.Combine(Env.ContentRootPath, "Data", "buchungen.txt");
-    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassenCodes.txt");
+    private string KlasseCodesPath => Path.Combine(Env.ContentRootPath, "Data", "klassencodes.txt");
 
     protected override void OnInitialized()
     {
@@ -278,3 +278,4 @@
         }
     }
 }
+
